utm/9.710/standalone.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sophos UTM 9",
  "Parameters": {
    "AMI": {
      "Description": "Autodetect uses the latest AMI based on the pricing option you select. Otherwise, specify an AMI ID.",
      "Type": "String",
      "Default": "autodetect"
    },
    "LicenseType": {
      "Description": "Select between Bring Your Own License (BYOL) or pay per instance-hour (Hourly). This parameter does not take effect if you manually enter an AMI ID.",
      "Type": "String",
      "AllowedValues": [
        "Hourly",
        "BYOL"
      ]
    },
    "VpcId": {
      "Type": "AWS::EC2::VPC::Id",
      "Description": "ID of an existing VPC to launch the deployment in."
    },
    "PrivateSubnetId": {
      "Description": "Subnet ID for private network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PublicSubnetId": {
      "Description": "Subnet ID for public network interface.",
      "Type": "AWS::EC2::Subnet::Id"
    },
    "PrivateNetworkCIDR": {
      "Description": "Allow all traffic from this CIDR on the private network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "PublicNetworkCIDR": {
      "Description": "Allow all TCP traffic (except port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "^(?:(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?).){3}(?:25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)(/([0-9]|[1-2][0-9]|3[0-2]))$",
      "ConstraintDescription": "Must be IPv4 CIDR notation: X.X.X.X/X"
    },
    "OptTrustedNetworkCIDR": {
      "Description": "Allow all traffic (including! TCP port 22 and 4444) from this CIDR on the public network interface.",
      "Type": "String",
      "Default": ""
    },
    "InstanceSize": {
      "Description": "The default EC2 instance type is m4.large. If m4.large is not available in your region, a similar EC2 instance type will be used.",
      "Type": "String",
      "Default": "default"
    },
    "KeyName": {
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Description": "Name of an existing EC2 KeyPair to enable SSH access."
    },
    "OptExistingElasticIpId": {
      "Description": "Association ID of an existing Elastic IP. If no ID is specified a new Elastic IP is created.",
      "Type": "String"
    }
  },
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "Instance Configuration"
          },
          "Parameters": [
            "AMI",
            "LicenseType",
            "InstanceSize"
          ]
        },
        {
          "Label": {
            "default": "Infrastructure Configuration"
          },
          "Parameters": [
            "VpcId",
            "PrivateSubnetId",
            "PublicSubnetId",
            "PrivateNetworkCIDR",
            "PublicNetworkCIDR",
            "OptExistingElasticIpId"
          ]
        },
        {
          "Label": {
            "default": "Access Permissions"
          },
          "Parameters": [
            "KeyName",
            "OptTrustedNetworkCIDR"
          ]
        }
      ],
      "ParameterLabels": {
        "AMI": {
          "default": "AMI ID (required)"
        },
        "LicenseType": {
          "default": "Pricing Option (required)"
        },
        "InstanceSize": {
          "default": "Instance Type (required)"
        },
        "VpcId": {
          "default": "VPC ID (required)"
        },
        "PrivateSubnetId": {
          "default": "Private Subnet ID (required)"
        },
        "PublicSubnetId": {
          "default": "Public Subnet ID (required)"
        },
        "PrivateNetworkCIDR": {
          "default": "Private Network CIDR (required)"
        },
        "PublicNetworkCIDR": {
          "default": "Public Network CIDR (required)"
        },
        "OptExistingElasticIpId": {
          "default": "Existing Elastic IP ID (optional)"
        },
        "KeyName": {
          "default": "SSH Key (required)"
        },
        "OptTrustedNetworkCIDR": {
          "default": "Trusted Network CIDR (optional)"
        }
      }
    }
  },
  "Mappings": {
    "RegionMap": {
      "af-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-east-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-1": {
        "Hourly": "ami-0a06c876a9f8abf16",
        "BYOL": "ami-05713a9ae9db618b0",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-2": {
        "Hourly": "ami-0d95543deebdbfe8e",
        "BYOL": "ami-06f6e20099d66def5",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-northeast-3": {
        "Hourly": "ami-068991ec22a40898d",
        "BYOL": "ami-05a41517342904a16",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-south-1": {
        "Hourly": "ami-0aa21298df2612053",
        "BYOL": "ami-040a4a73d2da271ae",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-1": {
        "Hourly": "ami-0b5b9729ed5e14b4a",
        "BYOL": "ami-0d2cbda249a58948d",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ap-southeast-2": {
        "Hourly": "ami-0637ca4ba3023aae6",
        "BYOL": "ami-0d542f2cbbb1050fa",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "ca-central-1": {
        "Hourly": "ami-026cc64f6e4c4eaf0",
        "BYOL": "ami-073efbf48b97b212d",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-central-1": {
        "Hourly": "ami-047666a0e81e92b9e",
        "BYOL": "ami-0b4f179779ce4b410",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-north-1": {
        "Hourly": "ami-0bb1502ba82573c43",
        "BYOL": "ami-0e2bda65def8f885c",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "eu-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-1": {
        "Hourly": "ami-0f9be05e4a33570d5",
        "BYOL": "ami-09a329e34c2af21d0",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-2": {
        "Hourly": "ami-07e0e2408d4776ff6",
        "BYOL": "ami-0fbb7c549345f0c92",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "eu-west-3": {
        "Hourly": "ami-0249dbe6cdf97027c",
        "BYOL": "ami-073ae440c018bd18d",
        "ARN": "aws",
        "HAInstanceType": "m5.large"
      },
      "me-south-1": {
        "Hourly": "",
        "BYOL": "",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "sa-east-1": {
        "Hourly": "ami-0a25065a17b0861bd",
        "BYOL": "ami-01524689db918231b",
        "ARN": "aws",
        "HAInstanceType": "m3.medium"
      },
      "us-east-1": {
        "Hourly": "ami-0cc2b520c55f7d172",
        "BYOL": "ami-019d863b49c96df81",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-east-2": {
        "Hourly": "ami-0537fe2a9dfaa2e13",
        "BYOL": "ami-0cc22e8e0536423c6",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-gov-east-1": {
        "Hourly": "ami-0ac7c1ebf664dbe90",
        "BYOL": "ami-0e7c5a51e360b28ff",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m5.large"
      },
      "us-gov-west-1": {
        "Hourly": "ami-0986ee0b06b5acfdb",
        "BYOL": "ami-0513516457b15f6c1",
        "ARN": "aws-us-gov",
        "HAInstanceType": "m4.large"
      },
      "us-west-1": {
        "Hourly": "ami-078b566fc75f900ea",
        "BYOL": "ami-0745fadf5a42ca5bb",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      },
      "us-west-2": {
        "Hourly": "ami-014bfc7845560cb7d",
        "BYOL": "ami-059e5f1c62592d081",
        "ARN": "aws",
        "HAInstanceType": "m4.large"
      }
    }
  },
  "Conditions": {
    "DetectAMI": {
      "Fn::Equals": [
        {
          "Ref": "AMI"
        },
        "autodetect"
      ]
    },
    "DetectInstanceSize": {
      "Fn::Equals": [
        {
          "Ref": "InstanceSize"
        },
        "default"
      ]
    },
    "TrustedPublicNetwork": {
      "Fn::Not": [
        {
          "Fn::Equals": [
            {
              "Ref": "OptTrustedNetworkCIDR"
            },
            ""
          ]
        }
      ]
    },
    "AllocateElasticIP": {
      "Fn::Equals": [
        {
          "Ref": "OptExistingElasticIpId"
        },
        ""
      ]
    }
  },
  "Resources": {
    "SecurityGroupPrivate": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "PrivateNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupPublic": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "0",
            "ToPort": "21"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "23",
            "ToPort": "4443"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "4445",
            "ToPort": "5431"
          },
          {
            "IpProtocol": "tcp",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            },
            "FromPort": "5433",
            "ToPort": "65535"
          },
          {
            "IpProtocol": "udp",
            "FromPort": "3410",
            "ToPort": "3410",
            "CidrIp": {
              "Ref": "PublicNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "SecurityGroupTrusted": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Security Group",
        "VpcId": {
          "Ref": "VpcId"
        },
        "SecurityGroupIngress": [
          {
            "IpProtocol": "-1",
            "CidrIp": {
              "Ref": "OptTrustedNetworkCIDR"
            }
          }
        ],
        "SecurityGroupEgress": [
          {
            "Description": "Allow all outbound traffic",
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      },
      "Condition": "TrustedPublicNetwork"
    },
    "PublicENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PublicSubnetId"
        },
        "Description": "ENI for Public Subnet",
        "GroupSet": [
          {
            "Fn::If": [
              "TrustedPublicNetwork",
              {
                "Ref": "SecurityGroupTrusted"
              },
              {
                "Ref": "SecurityGroupPublic"
              }
            ]
          },
          {
            "Ref": "SecurityGroupPublic"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "PrivateENI": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "SubnetId": {
          "Ref": "PrivateSubnetId"
        },
        "Description": "ENI for Private Subnet",
        "GroupSet": [
          {
            "Ref": "SecurityGroupPrivate"
          }
        ],
        "SourceDestCheck": "false"
      }
    },
    "Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private"
          }
        ],
        "InstanceType": {
          "Fn::If": [
            "DetectInstanceSize",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                "HAInstanceType"
              ]
            },
            {
              "Ref": "InstanceSize"
            }
          ]
        },
        "KeyName": {
          "Ref": "KeyName"
        },
        "NetworkInterfaces": [
          {
            "NetworkInterfaceId": {
              "Ref": "PublicENI"
            },
            "DeviceIndex": "0"
          },
          {
            "NetworkInterfaceId": {
              "Ref": "PrivateENI"
            },
            "DeviceIndex": "1"
          }
        ],
        "ImageId": {
          "Fn::If": [
            "DetectAMI",
            {
              "Fn::FindInMap": [
                "RegionMap",
                {
                  "Ref": "AWS::Region"
                },
                {
                  "Ref": "LicenseType"
                }
              ]
            },
            {
              "Ref": "AMI"
            }
          ]
        }
      }
    },
    "NewEIP": {
      "Type": "AWS::EC2::EIP",
      "Condition": "AllocateElasticIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "EIPAssociation": {
      "Type": "AWS::EC2::EIPAssociation",
      "Properties": {
        "NetworkInterfaceId": {
          "Ref": "PublicENI"
        },
        "AllocationId": {
          "Fn::If": [
            "AllocateElasticIP",
            {
              "Fn::GetAtt": [
                "NewEIP",
                "AllocationId"
              ]
            },
            {
              "Ref": "OptExistingElasticIpId"
            }
          ]
        }
      }
    }
  },
  "Outputs": {
    "URL": {
      "Description": "URL to the Gateway portal",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::GetAtt": [
                "Instance",
                "PublicIp"
              ]
            },
            ":4444"
          ]
        ]
      }
    }
  }
}
